tests/ui/lint/snapshots/needless_continue_comment_keeps_warning.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `continue`
   ╭─[test.lis:5:5]
 4 │     let _ = i
 5 │     continue // trailing note
   ·     ────┬───
   ·         ╰── redundant
 6 │   }
   ╰────
  help: Remove the `continue`. The loop already continues once its body ends · code: [lint.needless_continue]
