tests/ui/lint/snapshots/needless_continue_loop.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `continue`
    ╭─[test.lis:9:5]
  8 │     }
  9 │     continue
    ·     ────┬───
    ·         ╰── redundant
 10 │   }
    ╰────
  help: Remove the `continue`. The loop already continues once its body ends · code: [lint.needless_continue]
