tests/ui/lint/snapshots/needless_continue_nested_loop_fires_on_inner.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `continue`
   ╭─[test.lis:6:7]
 5 │       let _ = j
 6 │       continue
   ·       ────┬───
   ·           ╰── redundant
 7 │     }
   ╰────
  help: Remove the `continue`. The loop already continues once its body ends · code: [lint.needless_continue]
