tests/ui/lint/snapshots/needless_continue_while.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `continue`
   ╭─[test.lis:6:5]
 5 │     i += 1
 6 │     continue
   ·     ────┬───
   ·         ╰── redundant
 7 │   }
   ╰────
  help: Remove the `continue`. The loop already continues once its body ends · code: [lint.needless_continue]
