tests/ui/lint/snapshots/needless_match_reversed_arms.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `match`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── unnecessary
 5 │     None => None,
   ╰────
  help: Every arm rebuilds the subject unchanged. Replace this `match` with `o` · code: [lint.needless_match]
