tests/ui/lint/snapshots/needless_question_mark_option.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `?` in `Some`
   ╭─[test.lis:4:3]
 3 │   let x: Option<int> = Some(1)
 4 │   Some(x?)
   ·   ────┬───
   ·       ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `Some(x?)` with `x` · code: [lint.needless_question_mark]
